package com.lombard.dtos;

public enum Currency {
    UAH,
    EUR,
    USD
}
