package com.lombard.dtos;

public enum SaleAnnouncementStatus {
    PENDING,APPROVED,REJECTED
}
